<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ICD</string>
    
    <string name="home_btnScan">Scan</string>
    <string name="home_btnLogin">Login</string>
    <string name="home_btnEncode">Encode</string>
    
	<string name="login_lblUsername">Username:</string>
    <string name="login_lblPassword">Password:</string>
    <string name="login_btnLogin">Login</string>
    <string name="login_btnClear">Clear</string>
    
    <string name="encoder_typePrompt">Content Type:</string>
    <string-array name="encoder_typeArray">
    	<item>Contact Information</item>
    	<item>Magic Item</item>
    </string-array>
    <string name="encoder_btnEncode">Encode</string>
    <string name="encoder_lblName">Name:</string>
    <string name="encoder_lblObject">Object:</string>
    <string name="encoder_lblCategory">Category:</string>
    <string name="encoder_lblCategory2">Category2:</string>
    <string name="encoder_lblURL">URL:</string>
    
</resources>
