<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="top"
	    android:background="#ffffff">
	    
	    <RelativeLayout android:id="@+id/coffeeshop_header"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="left"
		    android:background="@drawable/img_header_background">
		    	
		    <ImageView
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:layout_centerVertical="true"
		    	android:layout_marginLeft="10sp"
		    	android:scaleType="fitCenter"
		    	android:src="@drawable/img_header"/>

	    </RelativeLayout>
	    
	    <RelativeLayout android:id="@+id/coffeeshop_footer"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:background="@drawable/img_footer_background"/>
		    
		<RelativeLayout
	    	android:layout_height="wrap_content"
	    	android:layout_width="fill_parent"
	    	android:layout_centerInParent="true">
	    	
	    	<Button android:id="@+id/home_btnLogin"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5sp"
		    	android:layout_centerHorizontal="true"
		    	android:drawableTop="@drawable/ic_menu_agenda"
		    	android:background="@drawable/btn_selector"
		    	android:textColor="#EEEEEE"
		    	android:text="@string/home_btnLogin"/>
		    	
		    <Button android:id="@+id/home_btnScan"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5sp"
		    	android:drawableTop="@drawable/ic_menu_view"
		    	android:background="@drawable/btn_selector"
		    	android:layout_toLeftOf="@id/home_btnLogin"
		    	android:textColor="#EEEEEE"
		    	android:text="@string/home_btnScan"/>
		    	
		    <Button android:id="@+id/home_btnEncode"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5sp"
		    	android:drawableTop="@drawable/ic_menu_slideshow"
		    	android:background="@drawable/btn_selector"
		    	android:layout_toRightOf="@id/home_btnLogin"
		    	android:textColor="#EEEEEE"
		    	android:text="@string/home_btnEncode"/>
				
		</RelativeLayout>
	    
</RelativeLayout>

<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="top"
	    android:background="#819b9b">
	    
	<ImageView
	    	android:layout_height="wrap_content"
	    	android:layout_width="wrap_content"
	    	android:scaleType="centerCrop"
	    	android:src="@drawable/img_header"/>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="bottom">
	    
	      <ViewFlipper android:id="@+id/home_viewFlipper"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="10sp"/> 
	    	
	     <TextView android:id="@+id/home_txtResult"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="10sp"
	    	android:textColor="#EEEEEE"
	    	android:textSize="18px"/>
		    	
	    <RelativeLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginBottom="10sp">
	    	
		    <Button android:id="@+id/home_btnLogin"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5sp"
		    	android:layout_centerHorizontal="true"
		    	android:drawableTop="@drawable/ic_menu_agenda"
		    	android:background="@drawable/btn_selector"
		    	android:textColor="#EEEEEE"
		    	android:text="@string/home_btnLogin"/>
		    	
		    <Button android:id="@+id/home_btnScan"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5sp"
		    	android:drawableTop="@drawable/ic_menu_view"
		    	android:background="@drawable/btn_selector"
		    	android:layout_toLeftOf="@id/home_btnLogin"
		    	android:textColor="#EEEEEE"
		    	android:text="@string/home_btnScan"/>
		    	
		    <Button android:id="@+id/home_btnEncode"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5sp"
		    	android:drawableTop="@drawable/ic_menu_slideshow"
		    	android:background="@drawable/btn_selector"
		    	android:layout_toRightOf="@id/home_btnLogin"
		    	android:textColor="#EEEEEE"
		    	android:text="@string/home_btnEncode"/>
		    	
	    </RelativeLayout>
	
	</LinearLayout>	
</LinearLayout>-->